# lane_detection

./: .gitignore  CMakeLists.txt  Kodasv1.sh  Kodasv3.sh  package.xml
config/: aes.yaml
launch/: lane_detection.launch
scripts/: lane_detection_node.py  lane_detection_node.py~  main.py
scripts/lib/: .config.py.swp  .runner.py.swp  config.py  experiment.py  runner.py  runner.py.old
scripts/lib/datasets/: lane_dataset.py  nolabel_dataset.py
scripts/lib/models/: laneatt.py
scripts/tensorboard/laneatt_r18_culane/: events.out.tfevents.1632386111.avees-desktop.28823.0  events.out.tfevents.1632387686.avees-desktop.30634.0  events.out.tfevents.1632450028.avees-desktop.21982.0  events.out.tfevents.1632450208.avees-desktop.22565.0
